--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.profiles.active=dev
 
+spring.datasource.url=jdbc:mysql://localhost:3306/photoGallery_db
+spring.datasource.username=***
+spring.datasource.password=***
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
