--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=dev
 
-spring.datasource.url=jdbc:mysql://localhost:3306/photoGallery_db
+spring.datasource.url=jdbc:mysql://localhost:3306/photo_gallery_db
 spring.datasource.username=***
 spring.datasource.password=***
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
